--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
-    <html>
-        <head>
-            <title>Ratchetmaster12's offical GitHub page!</title>
-            <script type="text/javascript" src="//code.jquery.com/jquery-1.10.2.min.js"></script>
-        </head>
-        <body>
-            <script>
-            </script>
-            <center>
-                <h1 color:"red">Hello</h1>
-                <h3>This page is ultra-temporaty</h3>
-            </center>
-        </body>
-    </html>
-<!-- End of file --!/>
+<!--
+To change this license header, choose License Headers in Project Properties.
+To change this template file, choose Tools | Templates
+and open the template in the editor.
+-->
+<html>
+    <head>
+        <title>Welcome to Ratch's ultra temporary site!</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="index.css"/>
+        <link href='http://fonts.googleapis.com/css?family=Dosis:200,300,400&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
+    </head>
+    
+    <body>
+        <div id="wrapper">
+            <div id="header">
+                <a href="index.html"><div id="logo"></div></a>
+                <ul class="navigation">
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="content.html">Ratch's Images</a></li>
+                </ul>
+            </div>
+            <div id="main_content">
+                <h1>Yeah, there's nothing here as the page is ultra temporary.</h1>
+            </div>
+            <div id="sidebar">
+                <p>You guessed it! There will be content here aswell!</p>
+            </div>
+        </div>
+    </body>
+    
+    <footer>
+        <p>Yeah, there will be stuff here <i>eventually</i> but not now.</p>
+    </footer>
+</html>
